responsive is hardcore

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <title>Test</title>
     </head>
     <body>
-        <a href="#modal" class="modalButton">open</a>
-        <a class="profile" href="https://www.instagram.com/rukas.1/">By Rukas1</a>
+        <main>
+            <a href="#modal" class="modalButton">open</a>
+            <a class="profile" href="https://www.instagram.com/rukas.1/">By Rukas1</a>
+        </main>
         <div id="modal" class="modal">
             <div class="modalContent">
                 <h1>Winter Mood</h1>
