--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
         <title>Winter Mood</title>
     </head>
     <body>
+        <div class="loader">
+            <span class="letter">l</span>
+            <span class="letter">o</span>
+            <span class="letter">a</span>
+            <span class="letter">d</span>
+            <span class="letter">i</span>
+            <span class="letter">n</span>
+            <span class="letter">g</span>
+        </div>
         <main>
             <a href="#modal" class="modalButton">open</a>
             <a class="profile" href="https://www.instagram.com/rukas.1/">By Rukas1</a>
